# zephyr-rpc

./: .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.rst
include/: helpers.h  packet.h  rpc.h
src/: helpers.c  packet.c  rpc.c
